--- a/style.css
+++ b/style.css
@@ -1,12 +1,28 @@
 #container {
     display: grid;
-    grid-template: 300px 1fr 300px / 1fr;
+    grid-template: 245px 1fr 300px / 1fr;
 }
 
 header {
     display: grid;
+    grid-template: 200px 45px / 1fr;
+}
+
+#headerFlex {
+    display: flex;
     align-items: center;
-    grid-template: 200px 75px / 1fr;
+    justify-content: center;
+    background-image: url(./libraryImage.jpg);
+}
+
+header h1 {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5) ;
+    font-size: 48px;
+}
+
+nav {
+    height: 100%;
 }
 
 nav ul {
@@ -19,4 +35,5 @@ nav ul {
 li a {
     color: black;
     text-decoration: none;
+    font-size: 24px;
 }
