--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ header h1 {
     color: white;
     background-color: rgba(0, 0, 0, 0.5) ;
     font-size: 48px;
+    font-family: "Boldonse", sans-serif;
 }
 
 nav {
     height: 100%;
+    background-color: rgba(83 , 195 , 189, 0.5 );
 }
 
 nav ul {
@@ -30,10 +32,15 @@ nav ul {
     list-style: none;
     gap: 15px;
     justify-content: center;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
 }
 
 li a {
     color: black;
     text-decoration: none;
     font-size: 24px;
+    font-family: "Boldonse", sans-serif;
 }
