--- a/style.css
+++ b/style.css
@@ -42,5 +42,27 @@ li a {
     color: black;
     text-decoration: none;
     font-size: 24px;
+    font-family: "Montserrat", sans-serif;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+}
+
+#contentHeader {
     font-family: "Boldonse", sans-serif;
+    font-size: 32px;
+}
+
+main p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    margin: 20px 0px;
+}
+
+.bookContainer {
+    min-height: 300px;
 }
