--- a/style.css
+++ b/style.css
@@ -64,5 +64,16 @@ main p {
 }
 
 .bookContainer {
-    min-height: 300px;
+    padding: 25px;
+    width: 1000px;
+    display: grid;
+    grid-template: 300px / 300px 300px 300px;
+    grid-auto-rows: 300px;
+    gap: 20px;
+    justify-content: center;
+}
+
+.bookContainer p {
+    margin: 0px;
+
 }
