--- a/style.css
+++ b/style.css
@@ -69,11 +69,25 @@ main p {
     display: grid;
     grid-template: 300px / 300px 300px 300px;
     grid-auto-rows: 300px;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
 }
 
 .bookContainer p {
     margin: 0px;
 
+}
+
+.card {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.card img {
+    max-width: 260px;
+    max-height: 150px;
+    object-fit: contain;
 }
