--- a/style.css
+++ b/style.css
@@ -84,10 +84,17 @@ main p {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    border:1px black solid ;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+    background-color: #F9EAE5;
 }
 
 .card img {
     max-width: 260px;
     max-height: 150px;
     object-fit: contain;
+}
+
+.card h3 {
+    margin-top: 4px;
 }
