--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header h1 {
 nav {
     height: 100%;
     background-color: rgba(83 , 195 , 189, 0.5 );
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 nav ul {
@@ -97,4 +98,25 @@ main p {
 
 .card h3 {
     margin-top: 4px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 30px;
+    background-color: rgba(83 , 195 , 189, 0.5 );
+    box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    gap: 10px;
+    font-size: 20px;
+    font-family:"Montserrat", sans-serif ;
+}
+
+footer ul {
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    justify-content: center;
+    gap: 5px;
 }
