--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(./libraryImage.jpg);
+    background-image: url(./images/libraryImage.jpg);
 }
 
 header h1 {
@@ -118,5 +118,10 @@ footer ul {
     list-style: none;
     padding: 0px;
     justify-content: center;
-    gap: 5px;
+    gap: 10px;
+}
+
+footer li {
+    height: 50px;
+    width: 50px;
 }
