--- a/style.css
+++ b/style.css
@@ -100,6 +100,17 @@ main p {
     margin-top: 4px;
 }
 
+#cardButtonContainer{
+    display: flex;
+    margin-top: 5px;
+    justify-content: space-around;
+}
+
+#cardButtonContainer button{
+    background-color: rgba(83 , 195 , 189, 0.5 );
+    border-radius: 4px;
+}
+
 footer {
     display: flex;
     flex-direction: column;
