--- a/style.css
+++ b/style.css
@@ -172,17 +172,88 @@ footer li {
 }
 
 #formContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: fixed;
+    margin-top: 100px;
     z-index: 1;
     height: 50vh;
     width: 50vw;
     background-color: #FFFFFF;
+    border: 1px solid black;
+    box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.5);
 }
 
 #formContainer form {
+    display: grid;
+    grid-template: 80px repeat(8, 30px) / 1fr;
+    align-items: center;
+}
+
+
+#formTitle {
+    text-align: center;
+    
+    font-family: "Boldonse", sans-serif;
+}
+
+.textlabel {
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    margin-bottom: -15px;
+}
+
+input {
+    width: 50%;
+    justify-self: center;
+}
+
+#readStatus {
+    display: grid;
+    grid-template: 30px 30px 30px / 1fr 1fr;
+    align-items: center;
+}
+
+#readStatus p{
+    grid-area: 1 / 1 / 2 / 3;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+}
+
+#readStatus input {
+    justify-self: end;
+    width: 15px;
+    margin-right: 10px;
+}
+
+#readStatus label {
+    justify-self: start;
+    padding-top: 3px;
+    padding-left: 5px;
+    font-family: "Montserrat", sans-serif;
+    margin-left: -5px;
+}
+
+#formButtonContainer {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    gap: 80px;
+}
+
+#formButtonContainer button {
+    width: 100px;
+}
+
+#formSubmit {
+    background-color: rgba(83 , 195 , 189, 0.5 );
+}
+
+#formCancel {
+    background-color: #FF7E7A;
+}
+
+.modalOpen {
+    opacity: 30%;
+}
+
+.modalClose{
+    display: none;
 }
