--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ footer li {
     background-color: #FFFFFF;
     border: 1px solid black;
     box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.5);
+    padding-top: 97.5px;
 }
 
 #formContainer form {
