--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ footer li {
     background-color: #FFFFFF;
     border: 1px solid black;
     box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.5);
-    padding-top: 97.5px;
+    padding-top: 30px;
+    min-height: 530px;
 }
 
 #formContainer form {
@@ -207,6 +208,7 @@ input {
     display: grid;
     grid-template: 30px 30px 30px / 1fr 1fr;
     align-items: center;
+    margin-top: 30px;
 }
 
 #readStatus p{
